[gd_scene load_steps=18 format=2]

[ext_resource path="res://Source/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Source/Enviornment/Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Audio/Superior_Product_Placement.mp3" type="AudioStream" id=3]
[ext_resource path="res://Source/Menu/GameOver.tscn" type="PackedScene" id=4]
[ext_resource path="res://Source/Enviornment/OutofBounds.gd" type="Script" id=5]
[ext_resource path="res://Source/Main.gd" type="Script" id=6]
[ext_resource path="res://Source/Menu/Menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Source/Theme/Main.theme" type="Theme" id=8]
[ext_resource path="res://3rdPartyAddons/Virtual Joystick/joystick/virtual_joystick.tscn" type="PackedScene" id=9]
[ext_resource path="res://3rdPartyAddons/Virtual Joystick/joystick/textures/joystick_tip.png" type="Texture" id=10]
[ext_resource path="res://Source/Menu/TimeLeft.tscn" type="PackedScene" id=11]
[ext_resource path="res://Source/Menu/OrbsCollected.tscn" type="PackedScene" id=12]
[ext_resource path="res://Source/Theme/ButtonFont.tres" type="DynamicFont" id=13]

[sub_resource type="Animation" id=1]
resource_name = "Cutscene"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Tutorial/MarginContainer/VBoxContainer/Time:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "9", "8", "7", "6", "5", "4", "3", "2", "1", "START" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Tutorial/MarginContainer/VBoxContainer/Text:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4, 6, 8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 142 ), Vector2( 0, 182 ), Vector2( 0, 102 ), Vector2( 0, 182 ), Vector2( 0, 102 ), Vector2( 0, 142 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Tutorial/MarginContainer/VBoxContainer/Time:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 8, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0.517647, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Player/Camera:translation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.9, 4, 6, 6.5, 8.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1.75278e-05, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 4, 3 ), Vector3( -25, 18, -10 ), Vector3( -25, 18, -110 ), Vector3( 35, 80, -50 ), Vector3( 35, 80, -50 ), Vector3( 0, 4, 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Player/Camera:rotation_degrees")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.9, 4, 6, 6.5, 8.5 ),
"transitions": PoolRealArray( 1, 1, 1, 2.08442e-05, 1, 1 ),
"update": 0,
"values": [ Vector3( -36.5, 0, 0 ), Vector3( -36.5, -90, 0 ), Vector3( -36.5, -135, 0 ), Vector3( -90, 0, 0 ), Vector3( -90, 0, 0 ), Vector3( -36.5, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Tutorial/MarginContainer/VBoxContainer/Time:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "10" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Tutorial/MarginContainer/VBoxContainer/Text:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 142 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Tutorial/MarginContainer/VBoxContainer/Time:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.517647, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Player/Camera:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 4, 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Player/Camera:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -36.5, 0, 0 ) ]
}

[sub_resource type="BoxShape" id=4]
extents = Vector3( 100, 10, 100 )

[sub_resource type="CircleShape2D" id=5]
radius = 58.0

[node name="Main" type="Node"]
script = ExtResource( 6 )

[node name="Cutscene" type="Node" parent="."]

[node name="Camera" type="Camera" parent="Cutscene"]
transform = Transform( 1, 0, 0, 0, 0.701407, 0.712761, 0, -0.712761, 0.701407, 0, 0, 0 )

[node name="UI" type="CanvasLayer" parent="Cutscene"]
layer = 2

[node name="Tutorial" type="Control" parent="Cutscene/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="Cutscene/UI/Tutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.666667 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Cutscene/UI/Tutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 148.0
margin_right = -24.0
margin_bottom = -324.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Cutscene/UI/Tutorial/MarginContainer"]
margin_right = 492.0
margin_bottom = 698.0

[node name="Time" type="Label" parent="Cutscene/UI/Tutorial/MarginContainer/VBoxContainer"]
margin_right = 492.0
margin_bottom = 698.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0.517647, 0, 1 )
custom_fonts/font = ExtResource( 13 )
text = "10"
align = 1
valign = 1
autowrap = true

[node name="Text" type="Label" parent="Cutscene/UI/Tutorial/MarginContainer/VBoxContainer"]
visible = false
margin_top = 142.0
margin_right = 492.0
margin_bottom = 698.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
custom_fonts/font = ExtResource( 13 )
text = "Collect Food Thoughts within the time limit to determine 
What's for Dinner!"
align = 1
valign = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cutscene"]
autoplay = "Cutscene"
anims/Cutscene = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( 1, 0, 0, 0, 0.803857, 0.594823, 0, -0.594823, 0.803857, 0, 4, 3 )
keep_aspect = 0
current = true
fov = 60.0

[node name="Platform" parent="." instance=ExtResource( 2 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.0871559, 0.996195, 0, -0.996195, -0.0871559, 0, 30, 0 )
shadow_enabled = true
directional_shadow_mode = 1

[node name="OutofBounds" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30, -20, -50 )
script = ExtResource( 5 )
StartPosition = Vector3( 0, 1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="OutofBounds"]
shape = SubResource( 4 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="MenuBtn" type="Button" parent="UI"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -125.0
margin_bottom = 100.0
rect_min_size = Vector2( 125, 100 )
theme = ExtResource( 8 )
text = "M"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI/MenuBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/MenuBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Menu"
align = 1
valign = 1

[node name="VirtualJoystick" parent="UI" instance=ExtResource( 9 )]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = -300.0
margin_right = 100.0
margin_bottom = -100.0
action_left = "move_left"
action_right = "move_right"
action_up = "move_forward"
action_down = "move_backward"

[node name="TouchScreenButton" type="TouchScreenButton" parent="UI/VirtualJoystick"]
visible = false
position = Vector2( 325, 50 )
normal = ExtResource( 10 )
shape = SubResource( 5 )

[node name="TimeLeft" parent="UI" instance=ExtResource( 11 )]
visible = false

[node name="OrbsCollected" parent="UI" instance=ExtResource( 12 )]
visible = false

[node name="GameOver" parent="UI" instance=ExtResource( 4 )]
visible = false

[node name="Menu" parent="UI" instance=ExtResource( 7 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="animation_finished" from="Cutscene/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="OutofBounds" to="OutofBounds" method="_on_OutofBounds_body_entered"]
[connection signal="pressed" from="UI/MenuBtn" to="UI/Menu" method="_on_MenuBtn_pressed"]
